--- a/html/html-lesson1.html
+++ b/html/html-lesson1.html
@@ -1,22 +1,395 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Cours html5</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
+    />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <script src="main.js"></script>
   </head>
-  <body>
-    <h1>Titre important</h1>
-    <h2><a href="http://www.google.fr">titre</a> un peu moins important</h2>
-    <h3>titre beaucoup moins important</h3>
-    <p>...</p>
-    <h6>titre beaucoup beaucoup beaucoup moins important</h6>
-    <hr />
-    <figure>
-      <img src="jenkins.png" alt="jenkins icon" height="150" width="150" />
-    </figure>
+  <body onload="draw()">
+    <section class="section">
+      <section class="hero is-medium is-primary is-bold">
+        <div class="hero-body"><h1>Titre important&#174;</h1></div>
+      </section>
+      <div class="container">
+        <svg width="400" height="180">
+          <rect
+            x="50"
+            y="20"
+            rx="20"
+            ry="20"
+            width="150"
+            height="150"
+            style="fill:red;stroke:black;stroke-width:5;opacity:0.5"
+          />
+        </svg>
+        <article>
+          <header><p>entete</p></header>
+          <p>corp de l'article</p>
+          <aside><p>aside</p></aside>
+          <footer><p>pied de page</p></footer>
+        </article>
+        <p>
+          <i>
+            <small><mark>don't click</mark></small>
+          </i>
+        </p>
+        <h2>
+          <a href="http://www.google.fr">titre</a> un <em>peu</em> moins
+          important&reg;
+        </h2>
+        <h3>titre <i>beaucoup</i> <small>moins</small> important</h3>
+        <p>...<time>10:30</time></p>
+        <h6>titre beaucoup <mark>beaucoup</mark> beaucoup moins important</h6>
+        <hr />
+        <figure>
+          <img src="jenkins.png" alt="jenkins icon" width="100" />
+          <img src="jenkins.png" alt="jenkins icon" width="100" />
+          <img src="jenkins.png" alt="jenkins icon" width="100" />
+          <figcaption>jenkin's logo</figcaption>
+        </figure>
+        <canvas id="myCanvas"></canvas>
+        <video poster="capgemini.png" controls="controls">
+          <source src="https://youtu.be/mM0JfBTow0w" />
+        </video>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/mM0JfBTow0w"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <table class="table">
+          <thead>
+            <tr>
+              <th><abbr title="Position">Pos</abbr></th>
+              <th>Team</th>
+              <th><abbr title="Played">Pld</abbr></th>
+              <th><abbr title="Won">W</abbr></th>
+              <th><abbr title="Drawn">D</abbr></th>
+              <th><abbr title="Lost">L</abbr></th>
+              <th><abbr title="Goals for">GF</abbr></th>
+              <th><abbr title="Goals against">GA</abbr></th>
+              <th><abbr title="Goal difference">GD</abbr></th>
+              <th><abbr title="Points">Pts</abbr></th>
+              <th>Qualification or relegation</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <th><abbr title="Position">Pos</abbr></th>
+              <th>Team</th>
+              <th><abbr title="Played">Pld</abbr></th>
+              <th><abbr title="Won">W</abbr></th>
+              <th><abbr title="Drawn">D</abbr></th>
+              <th><abbr title="Lost">L</abbr></th>
+              <th><abbr title="Goals for">GF</abbr></th>
+              <th><abbr title="Goals against">GA</abbr></th>
+              <th><abbr title="Goal difference">GD</abbr></th>
+              <th><abbr title="Points">Pts</abbr></th>
+              <th>Qualification or relegation</th>
+            </tr>
+          </tfoot>
+          <tbody>
+            <tr>
+              <th>1</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Leicester_City_F.C."
+                  title="Leicester City F.C."
+                  >Leicester City</a
+                >
+                <strong>(C)</strong>
+              </td>
+              <td>38</td>
+              <td>23</td>
+              <td>12</td>
+              <td>3</td>
+              <td>68</td>
+              <td>36</td>
+              <td>+32</td>
+              <td>81</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage"
+                  title="2016–17 UEFA Champions League"
+                  >Champions League group stage</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>2</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Arsenal_F.C."
+                  title="Arsenal F.C."
+                  >Arsenal</a
+                >
+              </td>
+              <td>38</td>
+              <td>20</td>
+              <td>11</td>
+              <td>7</td>
+              <td>65</td>
+              <td>36</td>
+              <td>+29</td>
+              <td>71</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage"
+                  title="2016–17 UEFA Champions League"
+                  >Champions League group stage</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>3</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Tottenham_Hotspur_F.C."
+                  title="Tottenham Hotspur F.C."
+                  >Tottenham Hotspur</a
+                >
+              </td>
+              <td>38</td>
+              <td>19</td>
+              <td>13</td>
+              <td>6</td>
+              <td>69</td>
+              <td>35</td>
+              <td>+34</td>
+              <td>70</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage"
+                  title="2016–17 UEFA Champions League"
+                  >Champions League group stage</a
+                >
+              </td>
+            </tr>
+            <tr class="is-selected">
+              <th>4</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Manchester_City_F.C."
+                  title="Manchester City F.C."
+                  >Manchester City</a
+                >
+              </td>
+              <td>38</td>
+              <td>19</td>
+              <td>9</td>
+              <td>10</td>
+              <td>71</td>
+              <td>41</td>
+              <td>+30</td>
+              <td>66</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Play-off_round"
+                  title="2016–17 UEFA Champions League"
+                  >Champions League play-off round</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>5</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Manchester_United_F.C."
+                  title="Manchester United F.C."
+                  >Manchester United</a
+                >
+              </td>
+              <td>38</td>
+              <td>19</td>
+              <td>9</td>
+              <td>10</td>
+              <td>49</td>
+              <td>35</td>
+              <td>+14</td>
+              <td>66</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Group_stage"
+                  title="2016–17 UEFA Europa League"
+                  >Europa League group stage</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>6</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Southampton_F.C."
+                  title="Southampton F.C."
+                  >Southampton</a
+                >
+              </td>
+              <td>38</td>
+              <td>18</td>
+              <td>9</td>
+              <td>11</td>
+              <td>59</td>
+              <td>41</td>
+              <td>+18</td>
+              <td>63</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Group_stage"
+                  title="2016–17 UEFA Europa League"
+                  >Europa League group stage</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>7</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/West_Ham_United_F.C."
+                  title="West Ham United F.C."
+                  >West Ham United</a
+                >
+              </td>
+              <td>38</td>
+              <td>16</td>
+              <td>14</td>
+              <td>8</td>
+              <td>65</td>
+              <td>51</td>
+              <td>+14</td>
+              <td>62</td>
+              <td>
+                Qualification for the
+                <a
+                  href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Third_qualifying_round"
+                  title="2016–17 UEFA Europa League"
+                  >Europa League third qualifying round</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th>8</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Liverpool_F.C."
+                  title="Liverpool F.C."
+                  >Liverpool</a
+                >
+              </td>
+              <td>38</td>
+              <td>16</td>
+              <td>12</td>
+              <td>10</td>
+              <td>63</td>
+              <td>50</td>
+              <td>+13</td>
+              <td>60</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>9</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Stoke_City_F.C."
+                  title="Stoke City F.C."
+                  >Stoke City</a
+                >
+              </td>
+              <td>38</td>
+              <td>14</td>
+              <td>9</td>
+              <td>15</td>
+              <td>41</td>
+              <td>55</td>
+              <td>−14</td>
+              <td>51</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>10</th>
+              <td>
+                <a
+                  href="https://en.wikipedia.org/wiki/Chelsea_F.C."
+                  title="Chelsea F.C."
+                  >Chelsea</a
+                >
+              </td>
+              <td>38</td>
+              <td>12</td>
+              <td>14</td>
+              <td>12</td>
+              <td>59</td>
+              <td>53</td>
+              <td>+6</td>
+              <td>50</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+        <p>best programming languages</p>
+        <ol>
+          <li>Java</li>
+          <li>JS</li>
+          <li>Python</li>
+          <li>Swift</li>
+        </ol>
+        <ul>
+          <li>Java</li>
+          <li>JS</li>
+          <li>Python</li>
+          <li>Swift</li>
+        </ul>
+        <div class="field">
+          <label class="label">Name</label>
+          <div class="control">
+            <input
+              class="input"
+              type="text"
+              pattern="[A-Z]"
+              title="le nom doit etre en majuscule et ne pas contenir de caracteres speciaux"
+              placeholder="e.g David"
+              autofocus="autofocus"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input
+              class="input"
+              type="email"
+              placeholder="e.g davidcapgemini@gmail.com"
+            />
+          </div>
+        </div>
+        <div class="field is-grouped">
+          <div class="control">
+            <button class="button is-primary" type="submit">Submit</button>
+          </div>
+          <div class="control">
+            <button class="button is-text">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
