--- a/front/html5/index.html
+++ b/front/html5/index.html
@@ -42,6 +42,31 @@
           maiores fuga dolore ipsa!
         </aside>
       </div>
+      <div class="clr"></div>
+      <section class="container">
+        <table>
+          <thead>
+            <tr>
+              <th>Country</th>
+              <th>City</th>
+              <th>Street</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>France</td>
+              <td>Lille</td>
+              <td>Pine Street</td>
+            </tr>
+            <tr>
+              <td>England</td>
+              <td>London</td>
+              <td>Oxford Street</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <footer id="my-footer"><p>made by David&copy;</p></footer>
     </main>
   </body>
 </html>
